# HelpMeOut

./: .gitignore  .gitmodules  CMakeLists.txt  HelpMeOutPlz-DEMO.js  HelpMeOutPlz.js  LICENSE.md  Memory  README.md  README_zh_CN.md
.github/workflows/: cmake.yml
___P/: CMakeLists.txt
__js_part/: HelpMeOutPlz.js
episodes/1/: Waken James.js  config.json
instructions/: README_en_US.md  README_zh_CN.md  StoryScriptAPIReference_zh_CN.md
jsoncpp-1.8.4/: CMakeLists.txt
src/: configs.h  gamestate.cpp  gamestate.h  levels.cpp  levels.h  main.cpp  scriptloader.cpp  scriptloader.h
storylines/example/: manifest.json
storylines/example/episodes/1/: 01.js  config.json
storylines/main/: manifest.json
storylines/main/episodes/0/: 00.js  config.json
storylines/main/episodes/1/: 01.js  config.json
storylines/main/episodes/2/: 02.js  config.json
